hey guys check these out

--- a/programs.html
+++ b/programs.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html>
 <head>
 	<meta charset="utf-8">
 	<title>fantastic five program</title>
@@ -20,20 +18,15 @@
 	</header>
 	<article class="main">
 		<section>
-			<h1>Welcome to the home page!</h1>
-
-			<div id="nav" style="text-align:center;position:center">
+			<h1>Programs</h1>
+<div id="nav" style="text-align:center;position:center">
 			<link rel="stylesheet" type="test/css" href="Bigbutton.css">
-			<a href="programs.html" class="Bigbutton blue">Programs</a>			
-			<a href="accounts.html" class="Bigbutton blue">Accounts</a>			
+			<a href="#" class="Bigbutton blue">edit program</a>			
+			<a href="#" class="Bigbutton blue">new program</a>			
 			</div>
-			
-
-			
 			<h2><link rel="stylesheet" type="text/css" href="button.css">
-			<a href="login.html"  class="button green">back</a>
-			
-			<a href="homeduh.html" class="button blue">home</a>
+			<a href="index.html" class="button green">back</a>
+			<a href="index.html" class="button blue">home</a>
 			<a href="login.html" class="button gray">logout</a>
 			</h2>
 			<p></p>
