--- a/homeduh.html
+++ b/homeduh.html
@@ -29,7 +29,10 @@
 			</div>
 			
 
-			
+			<div id="already here" style = color:red;text-align:center;position:center;>
+			<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+			you're home already...duh
+			</div>
 			<h2><link rel="stylesheet" type="text/css" href="button.css">
 			<a href="login.html"  class="button green">back</a>
 			
