hey guys, gotta get to work, probably gunna work on it tonight for a bit, at least  while watching the walking dead, and plan on getting up around 4 or 5 tomorrow to work on them until I finish... or class starts, whichever comes first

--- a/confirmation_success.html
+++ b/confirmation_success.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html>
 <head>
 	<meta charset="utf-8">
 	<title>fantastic five program</title>
@@ -20,11 +18,9 @@
 	</header>
 	<article class="main">
 		<section>
-			<h1>New Account</h1>
-			<div id="nav" style="text-align:center;position:center">
-			<link rel="stylesheet" type="test/css" href="Bigbutton.css">
-			<a href="#" class="Bigbutton blue">view account</a>			
-			<a href="#" class="Bigbutton blue">new account</a>			
+			<h1>Success!</h1>
+<div id="nav" style="text-align:center;position:center">
+			<link rel="stylesheet" type="test/css" href="Bigbutton.css">	
 			</div>
 			<h2><link rel="stylesheet" type="text/css" href="button.css">
 			<a href="#" class="button green">back</a>
