--- a/delete_confirm.html
+++ b/delete_confirm.html
@@ -20,16 +20,16 @@
 	</header>
 	<article class="main">
 		<section>
-			<h1>New Account</h1>
-			<div id="nav" style="text-align:center;position:center">
+			<h1>Are You Sure?</h1>
+		<div id="nav" style="text-align:center;position:center">
 			<link rel="stylesheet" type="test/css" href="Bigbutton.css">
-			<a href="#" class="Bigbutton blue">view account</a>			
-			<a href="#" class="Bigbutton blue">new account</a>			
+			<a href="#" class="Bigbutton blue">Yes</a>			
+			<a href="#" class="Bigbutton blue">No</a>			
 			</div>
 			<h2><link rel="stylesheet" type="text/css" href="button.css">
 			<a href="#" class="button green">back</a>
-			<a href="#" class="button blue">home</a>
-			<a href="#" class="button gray">logout</a>
+			<a href="index" class="button blue">home</a>
+			<a href="login" class="button gray">logout</a>
 			</h2>
 			<p></p>
 		</section>
