--- a/instructor_index.html
+++ b/instructor_index.html
@@ -20,16 +20,22 @@
 	</header>
 	<article class="main">
 		<section>
-			<h1>New Account</h1>
+			<h1>Welcome to the home page!</h1>
+
 			<div id="nav" style="text-align:center;position:center">
 			<link rel="stylesheet" type="test/css" href="Bigbutton.css">
-			<a href="#" class="Bigbutton blue">view account</a>			
-			<a href="#" class="Bigbutton blue">new account</a>			
+			<a href="programs.html" class="Bigbutton blue">Intstructors</a>			
+			<a href="accounts.html" class="Bigbutton blue">Schedule</a><br>
+			<a href="accounts.html" class="Bigbutton blue">Students</a>			
 			</div>
+			
+
+			
 			<h2><link rel="stylesheet" type="text/css" href="button.css">
-			<a href="#" class="button green">back</a>
-			<a href="#" class="button blue">home</a>
-			<a href="#" class="button gray">logout</a>
+			<a href="login.html"  class="button green">back</a>
+			
+			<a href="homeduh.html" class="button blue">home</a>
+			<a href="login.html" class="button gray">logout</a>
 			</h2>
 			<p></p>
 		</section>
