--- a/student_page_instructor_view.html
+++ b/student_page_instructor_view.html
@@ -23,26 +23,28 @@
 			
 			<table border="1">
 			<tr>
-			<td>balance:</td>
-			<td>$857.47</td>
+			<td>Name:</td>
+			<td>Charlie Liberski</td>
 			</tr>
 			<tr>
-			<td>due by:</td>
-			<td>TOMORROW!</td>
+			<td>address:</td>
+			<td>Here</td>
+			</tr>
+			<tr>
+			<td>Birthdate:</td>
+			<td>1/11/1989</td>
+			</tr>
+			<tr>
+			<td>Phone:</td>
+			<td>(414)380-7442</td>
 			</tr>
 			</table>
-			</h4>
-			<h5>
-			<link rel="stylesheet" type="text/css" href="Medbutton.css">
-			<a href="#" class="Medbutton blue">Awards</a>
-			<a href="#" class="medbutton blue">Schedule</a>
-			<a href="#" class="medbutton blue">Enroll</a><br>
-			<a href="#" class="medbutton blue">Edit Account</a>
-			<a href="#" class="medbutton blue">Delete Account</a><br>
-			<a href="#" class="medbutton blue">Add student</a>
-			<a href="#" class="medbutton blue">Delete student</a>
-			<br>
-			</h5>
+			</h4><br><br><br><br>
+			<div id="nav" style="text-align:center;position:center">
+			<link rel="stylesheet" type="test/css" href="medbutton.css">
+			<a href="#" class="medbutton blue">classes</a>			
+			<a href="#" class="medbutton blue">awards</a>			
+			</div>
 			
 			<h2>
 			<link rel="stylesheet" type="text/css" href="button.css">
