--- a/convert_to_group_account.html
+++ b/convert_to_group_account.html
@@ -20,11 +20,12 @@
 	</header>
 	<article class="main">
 		<section>
-			<h1>New Account</h1>
-			<div id="nav" style="text-align:center;position:center">
+			<h1>Add student to account</h1>
+<div id="nav" style="text-align:center;position:center;">
 			<link rel="stylesheet" type="test/css" href="Bigbutton.css">
-			<a href="#" class="Bigbutton blue">view account</a>			
-			<a href="#" class="Bigbutton blue">new account</a>			
+			Account is not currently set to group account, continue?<br>
+			<a href="#" class="Bigbutton blue">yes</a>			
+			<a href="sample_account.html" class="Bigbutton blue">no</a>			
 			</div>
 			<h2><link rel="stylesheet" type="text/css" href="button.css">
 			<a href="#" class="button green">back</a>
