--- a/delete_account.html
+++ b/delete_account.html
@@ -20,11 +20,11 @@
 	</header>
 	<article class="main">
 		<section>
-			<h1>New Account</h1>
-			<div id="nav" style="text-align:center;position:center">
+			<h1>Are You Sure?</h1>
+<div id="nav" style="text-align:center;position:center">
 			<link rel="stylesheet" type="test/css" href="Bigbutton.css">
-			<a href="#" class="Bigbutton blue">view account</a>			
-			<a href="#" class="Bigbutton blue">new account</a>			
+			<a href="#" class="Bigbutton blue">Yes</a>			
+			<a href="#" class="Bigbutton blue">No</a>			
 			</div>
 			<h2><link rel="stylesheet" type="text/css" href="button.css">
 			<a href="#" class="button green">back</a>
