--- a/sample_program.html
+++ b/sample_program.html
@@ -23,24 +23,25 @@
 			
 			<table border="1">
 			<tr>
-			<td>balance:</td>
-			<td>$857.47</td>
+			<td>Instructor:</td>
+			<td>Norris, Chuck</td>
 			</tr>
 			<tr>
-			<td>due by:</td>
+			<td>Next meeting:</td>
 			<td>TOMORROW!</td>
+			</tr>
+			<tr>
+			<td>focus:</td>
+			<td>Roundhouse kicks!!</td>
 			</tr>
 			</table>
 			</h4>
 			<h5>
 			<link rel="stylesheet" type="text/css" href="Medbutton.css">
-			<a href="#" class="Medbutton blue">Awards</a>
-			<a href="#" class="medbutton blue">Schedule</a>
-			<a href="#" class="medbutton blue">Enroll</a><br>
-			<a href="#" class="medbutton blue">Edit Account</a>
-			<a href="#" class="medbutton blue">Delete Account</a><br>
-			<a href="#" class="medbutton blue">Add student</a>
-			<a href="#" class="medbutton blue">Delete student</a>
+			<a href="#" class="Medbutton blue">Edit Program</a>
+			<a href="delete_confirm.html" class="medbutton blue">Delete Program</a><br>
+			<a href="#" class="medbutton blue">Students</a>
+			<a href="#" class="medbutton blue">Sessions</a>
 			<br>
 			</h5>
 			
