Made 2 Webpages, edited 1.

--- a/sample_program.html
+++ b/sample_program.html
@@ -18,7 +18,7 @@
 	</header>
 	<article class="main">
 		<section>
-			<h1>sample account page</h1>
+			<h1>Sample Program</h1>
 			<h4>
 			
 			<table border="1">
@@ -40,7 +40,7 @@
 			<link rel="stylesheet" type="text/css" href="Medbutton.css">
 			<a href="#" class="Medbutton blue">Edit Program</a>
 			<a href="delete_confirm.html" class="medbutton blue">Delete Program</a><br>
-			<a href="#" class="medbutton blue">Students</a>
+			<a href="list_of_enrolled_students.html" class="medbutton blue">Students</a>
 			<a href="#" class="medbutton blue">Sessions</a>
 			<br>
 			</h5>
