made list a drop down list instead of a search bar

--- a/searchable_list_of_students.html
+++ b/searchable_list_of_students.html
@@ -20,9 +20,14 @@
 
         <div align="center">
             <form>
-                Enter Student's ID Number: <input type="text" name="student_id"><br>
-                <br><br>
+                <select id="student_list">
+                    <option value="Student1">&lt;Student 1&gt;</option>
+                    <option value="Student1">&lt;Student 2&gt;</option>
+                    <option value="Student1">&lt;Student 3&gt;</option>
+                    <option value="Student1">&lt;Student 4&gt;</option>
+                </select>
             </form>
+
         </div>
 
         <h5>
