modified 4 files and made 4 files

--- a/delete_session.html
+++ b/delete_session.html
@@ -6,6 +6,7 @@
 
 </head>
 <body>
+
 <header class="navbar">
     <nav>
         <ul>
@@ -16,24 +17,26 @@
 
 <article class="main">
     <section>
-        <h1>Searchable List of Students</h1>
+        <h1>Delete Session</h1>
 
         <div id="page_content" align="center">
-            <a href="confirmation_success.html" class="Medbutton blue">Select Student</a>
+            <a href="confirmation_success.html" class="Medbutton blue">Submit</a>
             <br>
             <br><br>
             <form>
-                <select id="student_list">
-                    <option value="Student1">&lt;Student 1&gt;</option>
-                    <option value="Student1">&lt;Student 2&gt;</option>
-                    <option value="Student1">&lt;Student 3&gt;</option>
-                    <option value="Student1">&lt;Student 4&gt;</option>
+                <label>Select Session to Delete:</label><br>
+                <select id="session_list">
+
+                    <option value="Session1">&lt;Session 1&gt;</option>
+                    <option value="Session2">&lt;Session 2&gt;</option>
+                    <option value="Session3">&lt;Session 3&gt;</option>
+                    <option value="Session4">&lt;Session 4&gt;</option>
                 </select>
             </form>
         </div>
 
         <h2>
-            <a href="list_of_enrolled_students.html" class="button green">back</a>
+            <a href="list_of_sessions.html" class="button green">back</a>
             <a href="index.html" class="button blue">home</a>
             <a href="#" class="button gray">logout</a>
         </h2>
