--- a/list_of_enrolled_students.html
+++ b/list_of_enrolled_students.html
@@ -17,6 +17,12 @@
     <article class="main">
         <section>
             <h1>List of Enrolled Students</h1>
+
+            <div id="page_content" align="center">
+                <a href="searchable_list_of_students.html" class="Medbutton blue">Enroll Student</a>
+                <a href="delete_confirm.html" class="Medbutton blue">Drop Student</a><br>
+                <br>
+                <br><br>
                 <table style="text-align: center" border="1" align="center">
                     <tr>
                         <td style="font-weight: bold">Program: </td>
@@ -39,15 +45,11 @@
                         <td>Enrolled</td>
                     </tr>
                 </table>
-
-                <h5>
-                    <a href="#" class="Medbutton blue">Enroll Student</a>
-                    <a href="delete_confirm.html" class="Medbutton blue">Drop Student</a><br>
-                </h5>
+            </div>
 
                 <h2>
-                    <a href="#" class="button green">back</a>
-                    <a href="#" class="button blue">home</a>
+                    <a href="sample_program.html" class="button green">back</a>
+                    <a href="index.html" class="button blue">home</a>
                     <a href="#" class="button gray">logout</a>
                 </h2>
         </section>
