--- a/confirmation_success.html
+++ b/confirmation_success.html
@@ -24,7 +24,7 @@
 			</div>
 			<h2><link rel="stylesheet" type="text/css" href="button.css">
 			<a href="#" class="button green">back</a>
-			<a href="#" class="button blue">home</a>
+			<a href="index.html" class="button blue">home</a>
 			<a href="#" class="button gray">logout</a>
 			</h2>
 			<p></p>
