--- a/sample_program.html
+++ b/sample_program.html
@@ -19,36 +19,34 @@
 	<article class="main">
 		<section>
 			<h1>Sample Program</h1>
-			<h4>
-			
-			<table border="1">
-			<tr>
-			<td>Instructor:</td>
-			<td>Norris, Chuck</td>
-			</tr>
-			<tr>
-			<td>Next meeting:</td>
-			<td>TOMORROW!</td>
-			</tr>
-			<tr>
-			<td>focus:</td>
-			<td>Roundhouse kicks!!</td>
-			</tr>
-			</table>
-			</h4>
-			<h5>
-			<link rel="stylesheet" type="text/css" href="Medbutton.css">
-			<a href="#" class="Medbutton blue">Edit Program</a>
-			<a href="delete_confirm.html" class="medbutton blue">Delete Program</a><br>
-			<a href="list_of_enrolled_students.html" class="medbutton blue">Students</a>
-			<a href="#" class="medbutton blue">Sessions</a>
-			<br>
-			</h5>
+
+			<div id="page_content" align="center">
+                <a href="#" class="Medbutton blue">Edit Program</a>
+                <a href="delete_confirm.html" class="Medbutton blue">Delete Program</a><br>
+                <a href="list_of_enrolled_students.html" class="Medbutton blue">Students</a>
+                <a href="list_of_sessions.html" class="Medbutton blue">Sessions</a>
+                <br>
+                <br><br>
+                <table align="center" border="1">
+                    <tr>
+                        <td>Instructor:</td>
+                        <td>Norris, Chuck</td>
+                    </tr>
+                    <tr>
+                        <td>Next meeting:</td>
+                        <td>TOMORROW!</td>
+                    </tr>
+                    <tr>
+                        <td>focus:</td>
+                        <td>Roundhouse kicks!!</td>
+                    </tr>
+                </table>
+			</div>
 			
 			<h2>
 			<link rel="stylesheet" type="text/css" href="button.css">
 			<a href="#" class="button green">back</a>
-			<a href="#" class="button blue">home</a>
+			<a href="index.html" class="button blue">home</a>
 			<a href="#" class="button gray">logout</a>
 			</h2>
 			<p></p>
