Modified many files, so that links work and made many other changes.

--- a/delete_session.html
+++ b/delete_session.html
@@ -38,7 +38,7 @@
         <h2>
             <a href="list_of_sessions.html" class="button green">back</a>
             <a href="index.html" class="button blue">home</a>
-            <a href="#" class="button gray">logout</a>
+            <a href="login.html" class="button gray">logout</a>
         </h2>
     </section>
 </article>
