--- a/homeduh.html
+++ b/homeduh.html
@@ -31,11 +31,10 @@
 
 			<div id="already here" style = color:red;text-align:center;position:center;>
 			<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-			you're home already...duh
+			You're home already... Duh
 			</div>
 			<h2><link rel="stylesheet" type="text/css" href="button.css">
 			<a href="login.html"  class="button green">back</a>
-			
 			<a href="homeduh.html" class="button blue">home</a>
 			<a href="login.html" class="button gray">logout</a>
 			</h2>
