--- a/reschedule_session.html
+++ b/reschedule_session.html
@@ -20,7 +20,8 @@
         <h1>Reschedule Session</h1>
 
         <div id="page_content" align="center">
-            <a href="confirmation_success.html" class="Medbutton blue">Submit</a>
+            <a href="confirmation_success.html" class="Medbutton blue">Submit Valid</a>
+            <a href="reschedule_session.html" class="Medbutton blue">Submit Invalid</a>
             <br>
             <br><br>
             <form>
@@ -34,7 +35,7 @@
         <h2>
             <a href="list_of_sessions.html" class="button green">back</a>
             <a href="index.html" class="button blue">home</a>
-            <a href="#" class="button gray">logout</a>
+            <a href="login.html" class="button gray">logout</a>
         </h2>
     </section>
 </article>
