--- a/programs.html
+++ b/programs.html
@@ -19,15 +19,29 @@
 	<article class="main">
 		<section>
 			<h1>Programs</h1>
-<div id="nav" style="text-align:center;position:center">
-			<link rel="stylesheet" type="test/css" href="Bigbutton.css">
-			<a href="#" class="Bigbutton blue">edit program</a>			
-			<a href="#" class="Bigbutton blue">new program</a>			
-			</div>
-			<h2><link rel="stylesheet" type="text/css" href="button.css">
-			<a href="index.html" class="button green">back</a>
-			<a href="index.html" class="button blue">home</a>
-			<a href="login.html" class="button gray">logout</a>
+
+            <div id="page_content" align="center">
+                <a href="sample_program.html" class="Bigbutton blue">edit program</a>
+                <a href="#" class="Bigbutton blue">new program</a>
+                <br>
+                <br><br>
+                <b>Select a Program and Click "Edit Program" or Click "Create a New Program"</b>
+                <form>
+                    <label>Programs: </label><br>
+                    <select id="program_list">
+                        <option value="Program1">&lt;Program 1&gt;</option>
+                        <option value="Program2">&lt;Program 2&gt;</option>
+                        <option value="Program3">&lt;Program 3&gt;</option>
+                        <option value="Program4">&lt;Program 4&gt;</option>
+                    </select>
+                </form>
+            </div>
+
+			<h2>
+                <link rel="stylesheet" type="text/css" href="button.css">
+                <a href="index.html" class="button green">back</a>
+                <a href="index.html" class="button blue">home</a>
+                <a href="login.html" class="button gray">logout</a>
 			</h2>
 			<p></p>
 		</section>
