--- a/sample_program.html
+++ b/sample_program.html
@@ -45,9 +45,9 @@
 			
 			<h2>
 			<link rel="stylesheet" type="text/css" href="button.css">
-			<a href="#" class="button green">back</a>
+			<a href="programs.html" class="button green">back</a>
 			<a href="index.html" class="button blue">home</a>
-			<a href="#" class="button gray">logout</a>
+			<a href="login.html" class="button gray">logout</a>
 			</h2>
 			<p></p>
 		</section>
