added a few more pages, should be finished soon, then onto correcting all the links

--- a/class_times.html
+++ b/class_times.html
@@ -13,22 +13,22 @@
 	</header>
 	<article class="main">
 		<section>
-			<h1>Student Search</h1>
+			<h1>C programming for dummies<br>
+			</h1>
 <div id="nav" style="text-align:center;position:center">
 			<form>
-			<select id="select student" style="color: #222200" size="1" name="Students">
-			<option value="">Students:</option>
-	  		<option value="Cassie">Dowling, Cassie </option>
-	  		<option value="Elizabeth">Erbes, Elizabeth</option>
-	    		<option value="Carlos">Gonzales, Carlos</option>
-	    		<option value="Charlie">Liberski, Charlie</option>
-	    		<option value="Andrew">Meyer, Andrew </option>
+			<select id="select class time" style="color: #222200" size="1" name="classes">
+			<option value="">times:</option>
+	  		<option value="1">M,W: 10:00-12:00</option>
+	  		<option value="2">T,R: 10:00-12:00</option>
+	    		<option value="3">T,R: 19:00-21:00</option>
+	    		
 			</select><br>
-			or enter student #:<input type="text" name="student_num"><br>
+			
 	    		<input type="submit" value="Go!">
 			</form>
 			</div>
-			<h2><link rel="stylesheet" type="text/css" href="button.css">
+			<h2><link rel="stylesheet" type="text/css">
 			<a href="accounts.html" class="button green">back</a>
 			<a href="index.html" class="button blue">home</a>
 			<a href="login.html" class="button gray">logout</a>
