--- a/instructor_classlist.html
+++ b/instructor_classlist.html
@@ -13,22 +13,23 @@
 	</header>
 	<article class="main">
 		<section>
-			<h1>Student Search</h1>
+			<h1>Class Search by Instructor<br>
+			Ritchie, Dennis</h1>
 <div id="nav" style="text-align:center;position:center">
 			<form>
-			<select id="select student" style="color: #222200" size="1" name="Students">
-			<option value="">Students:</option>
-	  		<option value="Cassie">Dowling, Cassie </option>
-	  		<option value="Elizabeth">Erbes, Elizabeth</option>
-	    		<option value="Carlos">Gonzales, Carlos</option>
-	    		<option value="Charlie">Liberski, Charlie</option>
-	    		<option value="Andrew">Meyer, Andrew </option>
+			<select id="select class" style="color: #222200" size="1" name="classes">
+			<option value="">classes:</option>
+	  		<option value="c">C programming language for dummies </option>
+	  		<option value="language">creating your own programming language</option>
+	    		<option value="meditation">advanced physics</option>
+	    		<option value="cartography">unix tutorial</option>
+	    		<option value="jobs">creating Jobs</option>
 			</select><br>
-			or enter student #:<input type="text" name="student_num"><br>
+			
 	    		<input type="submit" value="Go!">
 			</form>
 			</div>
-			<h2><link rel="stylesheet" type="text/css" href="button.css">
+			<h2><link rel="stylesheet" type="text/css">
 			<a href="accounts.html" class="button green">back</a>
 			<a href="index.html" class="button blue">home</a>
 			<a href="login.html" class="button gray">logout</a>
