--- a/instructor_index.html
+++ b/instructor_index.html
@@ -31,7 +31,7 @@
 			
 
 			
-			<h2><link rel="stylesheet" type="text/css" href="button.css">
+			<h2><link rel="stylesheet" type="text/css">
 			<a href="login.html"  class="button green">back</a>
 			
 			<a href="homeduh.html" class="button blue">home</a>
