--- a/sample_student_classes.html
+++ b/sample_student_classes.html
@@ -18,7 +18,7 @@
 	</header>
 	<article class="main">
 		<section>
-			<h1>sample Student's classes</h1>
+			<h1>Sample Student's Classes</h1>
 			<h4>
 			
 			<table border="1">
