--- a/assign_award.html
+++ b/assign_award.html
@@ -13,18 +13,16 @@
 	</header>
 	<article class="main">
 		<section>
-			<h1>Student Search</h1>
+			<h1>Award Search</h1>
 <div id="nav" style="text-align:center;position:center">
 			<form>
-			<select id="select student" style="color: #222200" size="1" name="Students">
+			<select id="select award" style="color: #222200" size="1" name="Awards">
 			<option value="">Students:</option>
-	  		<option value="Cassie">Dowling, Cassie </option>
-	  		<option value="Elizabeth">Erbes, Elizabeth</option>
-	    		<option value="Carlos">Gonzales, Carlos</option>
-	    		<option value="Charlie">Liberski, Charlie</option>
-	    		<option value="Andrew">Meyer, Andrew </option>
+	  		<option value="java1">java master </option>
+	  		<option value="dog1">dog whisperer</option>
+	    		<option value="yoga1">stretch armstrong</option>
 			</select><br>
-			or enter student #:<input type="text" name="student_num"><br>
+			or new award:<input type="text" name="new_award"><br>
 	    		<input type="submit" value="Go!">
 			</form>
 			</div>
