--- a/instructor_search.html
+++ b/instructor_search.html
@@ -13,22 +13,22 @@
 	</header>
 	<article class="main">
 		<section>
-			<h1>Student Search</h1>
+			<h1>Instructor Search</h1>
 <div id="nav" style="text-align:center;position:center">
 			<form>
-			<select id="select student" style="color: #222200" size="1" name="Students">
-			<option value="">Students:</option>
+			<select id="select instructor" style="color: #222200" size="1" name="Instructors">
+			<option value="">Instructors:</option>
 	  		<option value="Cassie">Dowling, Cassie </option>
 	  		<option value="Elizabeth">Erbes, Elizabeth</option>
 	    		<option value="Carlos">Gonzales, Carlos</option>
 	    		<option value="Charlie">Liberski, Charlie</option>
 	    		<option value="Andrew">Meyer, Andrew </option>
 			</select><br>
-			or enter student #:<input type="text" name="student_num"><br>
+			or enter instructor #:<input type="text" name="instructor_num"><br>
 	    		<input type="submit" value="Go!">
 			</form>
 			</div>
-			<h2><link rel="stylesheet" type="text/css" href="button.css">
+			<h2><link rel="stylesheet" type="text/css">
 			<a href="accounts.html" class="button green">back</a>
 			<a href="index.html" class="button blue">home</a>
 			<a href="login.html" class="button gray">logout</a>
