Add application title to page header
Adds the application title and a link to the home page to page header on all
pages.

--- a/add_student_to_account.html
+++ b/add_student_to_account.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<header class="navbar">
-		<div class="brand"></div>
+		<div class="brand"><a href="index.html">Fantastic Five Training Application Prototype</a></div>
 		<nav>
 			<ul>
 			</ul>
