--- a/delete_confirm.html
+++ b/delete_confirm.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<header class="navbar">
-		<div class="brand"></div>
+		<div class="brand"><a href="index.html">Fantastic Five Training Application Prototype</a></div>
 		<nav>
 			<ul>
 			</ul>
