--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 		<header class="navbar">
-				<div class="brand"></div>
+				<div class="brand"><a href="index.html">Fantastic Five Training Application Prototype</a></div>
 				<nav>
 						<ul>
 						</ul>
