--- a/sample_student_classes.html
+++ b/sample_student_classes.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<header class="navbar">
-		<div class="brand"></div>
+		<div class="brand"><a href="index.html">Fantastic Five Training Application Prototype</a></div>
 		<nav>
 			<ul>
 			</ul>
