--- a/searchable_list_of_students.html
+++ b/searchable_list_of_students.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <header class="navbar">
+	<div class="brand"><a href="index.html">Fantastic Five Training Application Prototype</a></div>
 	<nav>
 		<ul>
 
