--- a/sample_program.html
+++ b/sample_program.html
@@ -18,7 +18,7 @@
 			<h1>Sample Program</h1>
 
 			<div id="page_content" align="center">
-				<a href="#" class="Medbutton blue">Edit Program</a>
+				<a href="edit_program.html" class="Medbutton blue">Edit Program</a>
 				<a href="delete_confirm.html" class="Medbutton blue">Delete Program</a><br>
 				<a href="list_of_enrolled_students.html" class="Medbutton blue">Students</a>
 				<a href="list_of_sessions.html" class="Medbutton blue">Sessions</a>
