--- a/student_page_instructor_view.html
+++ b/student_page_instructor_view.html
@@ -15,30 +15,34 @@
 	</header>
 	<article class="main">
 		<section>
-			<h1>sample Student's classes</h1>
+			<h1>sample account page</h1>
 			<h4>
 
 			<table border="1">
 			<tr>
-			<td>Yoga</td>
-			<td>M,T,R,S: 8:00-9:00</td>
+			<td>Name:</td>
+			<td>Charlie Liberski</td>
 			</tr>
 			<tr>
-			<td>Pilates</td>
-			<td>S,W,F: 8:00-9:00</td>
+			<td>address:</td>
+			<td>Here</td>
 			</tr>
 			<tr>
-			<td>Dog Training</td>
-			<td>T,R: 12:00-13:00</td>
+			<td>Birthdate:</td>
+			<td>1/11/1989</td>
 			</tr>
 			<tr>
-			<td>Java101</td>
-			<td>M,T,W,R,F: 15:00-17:30</td>
+			<td>Phone:</td>
+			<td>(414)380-7442</td>
 			</tr>
 			</table>
 			</h4><br><br><br><br>
 
-
+			<div id="nav" style="text-align:center;position:center">
+			<link rel="stylesheet" type="test/css" href="medbutton.css">
+			<a href="#" class="medbutton blue">classes</a>
+			<a href="#" class="medbutton blue">awards</a>
+			</div>
 			<h2>
 			<a href="#" class="button green">back</a>
 			<a href="#" class="button blue">home</a>
