--- a/delete_confirm.html
+++ b/delete_confirm.html
@@ -18,8 +18,8 @@
 			<h1>Are You Sure?</h1>
 		<div id="nav" style="text-align:center;position:center">
 			<link rel="stylesheet" type="test/css" href="Bigbutton.css">
-			<a href="#" class="Bigbutton blue">Yes</a>
-			<a href="#" class="Bigbutton blue">No</a>
+			<a href="confirmation_success.html" class="Bigbutton blue">Yes</a>
+			<a href="sample_program.html" class="Bigbutton blue">No</a>
 			</div>
 			<h2>
 			<a href="#" class="button green">back</a>
