--- a/edit_program_again.html
+++ b/edit_program_again.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html>
 <head>
 	<meta charset="utf-8">
 	<title>fantastic five program</title>
@@ -7,7 +5,7 @@
 </head>
 <body>
 	<header class="navbar">
-		<div class="brand"><a href="index.html">Fantastic Five Training Application Prototype</a></div>
+		<div class="brand"></div>
 		<nav>
 			<ul>
 			</ul>
@@ -16,7 +14,11 @@
 	<article class="main">
 		<section>
 			<h1>Edit Program</h1>
-<div id="nav" style="text-align:center;position:center"><br>
+<div id="badlog" style = color:red;text-align:center;position:center;>
+
+			ERROR: information incorrect, try again
+			</div>
+<div id="nav" style="text-align:center;position:center">
 			<form>
 			Program name:<input type="text" name="progName"><br>
 			instructor name:<input type="text" name="instructor"><br>
@@ -38,7 +40,7 @@
 			<a href="edit_program_again.html" class="button gray">bad info</a>
 			</div>
 			</div>
-			<h2>
+			<h2><link rel="stylesheet" type="text/css" href="button.css">
 			<a href="accounts.html" class="button green">back</a>
 			<a href="index.html" class="button blue">home</a>
 			<a href="login.html" class="button gray">logout</a>
