Modified new_program.html and programs.html

--- a/new_program.html
+++ b/new_program.html
@@ -17,6 +17,10 @@
 		<section>
 			<h1>New Program</h1>
 <div id="nav" style="text-align:center;position:center">
+			<a href="sample_program.html" class="Bigbutton blue">Submit Valid</a>
+			<a href="new_program.html" class="Bigbutton blue">Submit Invalid</a>
+				<br>
+				<br><br>
 			<form>
 			Program name:<input type="text" name="progName"><br>
 			instructor name:<input type="text" name="instructor"><br>
@@ -29,7 +33,7 @@
 			</form>
 			</div>
 			<h2>
-			<a href="accounts.html" class="button green">back</a>
+			<a href="programs.html" class="button green">back</a>
 			<a href="index.html" class="button blue">home</a>
 			<a href="login.html" class="button gray">logout</a>
 			</h2>
