--- a/programs.html
+++ b/programs.html
@@ -18,7 +18,7 @@
 			<h1>Programs</h1>
 			<div id="page_content" align="center">
 				<a href="sample_program.html" class="Bigbutton blue">edit program</a>
-				<a href="#" class="Bigbutton blue">new program</a>
+				<a href="new_program.html" class="Bigbutton blue">new program</a>
 				<br>
 				<br><br>
 				<b>Select a Program and Click "Edit Program" or Click "Create a New Program"</b>
