here goes nothing

--- a/new_account_again.html
+++ b/new_account_again.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html>
 <head>
 	<meta charset="utf-8">
 	<title>fantastic five program</title>
@@ -7,7 +5,7 @@
 </head>
 <body>
 	<header class="navbar">
-		<div class="brand"><a href="index.html">Fantastic Five Training Application Prototype</a></div>
+		<div class="brand"></div>
 		<nav>
 			<ul>
 			</ul>
@@ -15,8 +13,12 @@
 	</header>
 	<article class="main">
 		<section>
-			<h1>New Account</h1><br>
-<div id="nav" style="text-align:center;position:center">
+			<h1>New Account</h1>
+			<div id="badlog" style = color:red;text-align:center;position:center;>
+			
+			ERROR: information incorrect, try again
+			</div>
+			<div id="nav" style="text-align:center;position:center">
 			<form>
 			First name:<input type="text" name="firstname"><br>
 			Last name:<input type="text" name="lastname"><br>
@@ -29,7 +31,7 @@
 			<input type="submit" value="Go!">
 			</form>
 			</div>
-			<h2>
+			<h2><link rel="stylesheet" type="text/css" href="button.css">
 			<a href="accounts.html" class="button green">back</a>
 			<a href="index.html" class="button blue">home</a>
 			<a href="login.html" class="button gray">logout</a>
