--- a/add_student_to_account.html
+++ b/add_student_to_account.html
@@ -1,13 +1,16 @@
-<!DOCTYPE html>
-<html>
 <head>
 	<meta charset="utf-8">
 	<title>fantastic five program</title>
 	<link rel="stylesheet" type="text/css" href="assets/stylesheets/default.css"/>
+
+
+
+
+
 </head>
 <body>
 	<header class="navbar">
-		<div class="brand"><a href="index.html">Fantastic Five Training Application Prototype</a></div>
+		<div class="brand"></div>
 		<nav>
 			<ul>
 			</ul>
@@ -24,7 +27,7 @@
 			<input type="submit" value="Go!">
 			</form>
 			</div>
-			<h2>
+			<h2><link rel="stylesheet" type="text/css" href="button.css">
 			<a href="accounts.html" class="button green">back</a>
 			<a href="index.html" class="button blue">home</a>
 			<a href="login.html" class="button gray">logout</a>
