--- a/instructor_classlist.html
+++ b/instructor_classlist.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html>
 <head>
 	<meta charset="utf-8">
 	<title>fantastic five program</title>
@@ -7,7 +5,7 @@
 </head>
 <body>
 	<header class="navbar">
-		<div class="brand"><a href="index.html">Fantastic Five Training Application Prototype</a></div>
+		<div class="brand"></div>
 		<nav>
 			<ul>
 			</ul>
@@ -23,12 +21,21 @@
 			<option value="">classes:</option>
 	  		<option value="c">C programming language for dummies </option>
 	  		<option value="language">creating your own programming language</option>
-				<option value="meditation">advanced physics</option>
-				<option value="cartography">unix tutorial</option>
-				<option value="jobs">creating Jobs</option>
+	    		<option value="meditation">advanced physics</option>
+	    		<option value="cartography">unix tutorial</option>
+	    		<option value="jobs">creating Jobs for the future!</option>
 			</select><br>
-				<input type="submit" value="Go!">
+			
+	    		<input type="submit" value="Go!">
 			</form>
+			</div>
+			<div id= "good" style = text-align:center;position:absolute;bottom:390px;left:640px;>
+			<link rel="stylesheet" type="text/css" href="button.css">
+			<a href="sample_program.html" class="button gray">go!</a>
+			</div>
+			<div id= "income" style = text-align:center;position:absolute;bottom:320px;left:520px;>
+			<link rel="stylesheet" type="text/css" href="button.css">
+			<a href="teacher_income_page.html" class="medbutton green">instructor's income</a>
 			</div>
 			<h2><link rel="stylesheet" type="text/css">
 			<a href="accounts.html" class="button green">back</a>
