--- a/student_classes.html
+++ b/student_classes.html
@@ -18,38 +18,32 @@
 	</header>
 	<article class="main">
 		<section>
-			<h1>sample account page</h1>
+			<h1>Classes enrolled in</h1>
 			<h4>
 			
 			<table border="1">
 			<tr>
-			<td>Name:</td>
-			<td>Charlie Liberski</td>
+			<td>class</td>
+			<td>instructor</td>
+			<td>time</td>
 			</tr>
 			<tr>
-			<td>address:</td>
-			<td>Here</td>
+			<td>dog training</td>
+			<td>Carlos Gonzales</td>
+			<td>M,W,R 8:00-9:30</td>
 			</tr>
 			<tr>
-			<td>Birthdate:</td>
-			<td>1/11/1989</td>
+			<td>Jujitsu</td>
+			<td>Elizabeth Erbes</td>
+			<td>M,T,W,F 5:00-7:00</td>
 			</tr>
-			<tr>
-			<td>Phone:</td>
-			<td>(414)380-7442</td>
-			</tr>
+
 			</table>
-			</h4><br><br><br><br>
-			<div id="nav" style="text-align:center;position:center">
-			<link rel="stylesheet" type="test/css" href="medbutton.css">
-			<a href="student_classes.html" class="medbutton blue">classes</a>			
-			<a href="student_awards.html" class="medbutton blue">awards</a>			
-			</div>
-			
+
 			<h2>
 			<link rel="stylesheet" type="text/css" href="button.css">
 			<a href="#" class="button green">back</a>
-			<a href="#" class="button blue">home</a>
+			<a href="instructor_index.html" class="button blue">home</a>
 			<a href="login.html" class="button gray">logout</a>
 			</h2>
 			<p></p>
