--- a/student_search.html
+++ b/student_search.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html>
 <head>
 	<meta charset="utf-8">
 	<title>fantastic five program</title>
@@ -7,7 +5,7 @@
 </head>
 <body>
 	<header class="navbar">
-		<div class="brand"><a href="index.html">Fantastic Five Training Application Prototype</a></div>
+		<div class="brand"></div>
 		<nav>
 			<ul>
 			</ul>
@@ -18,19 +16,23 @@
 			<h1>Student Search</h1>
 <div id="nav" style="text-align:center;position:center">
 			<form>
-			<select id="select student" style="color: #222200" size="10" name="Students">
+			<select id="select student" style="color: #222200" size="5" name="Students">
 			<option value="">Students:</option>
 	  		<option value="Cassie">Dowling, Cassie </option>
 	  		<option value="Elizabeth">Erbes, Elizabeth</option>
-				<option value="Carlos">Gonzales, Carlos</option>
-				<option value="Charlie">Liberski, Charlie</option>
-				<option value="Andrew">Meyer, Andrew </option>
+	    		<option value="Carlos">Gonzales, Carlos</option>
+	    		<option value="Charlie">Liberski, Charlie</option>
+	    		<option value="Andrew">Meyer, Andrew </option>
 			</select><br>
 			or enter student #:<input type="text" name="student_num"><br>
-				<input type="submit" value="Go!">
+	    		<input type="submit" value="Go!">
 			</form>
 			</div>
-			<h2>
+						<div id= "good" style = text-align:center;position:absolute;bottom:345px;left:640px;>
+			<link rel="stylesheet" type="text/css" href="button.css">
+			<a href="sample_account.html" class="button gray">go!</a>
+			</div>
+			<h2><link rel="stylesheet" type="text/css" href="button.css">
 			<a href="accounts.html" class="button green">back</a>
 			<a href="index.html" class="button blue">home</a>
 			<a href="login.html" class="button gray">logout</a>
