--- a/enrollment.html
+++ b/enrollment.html
@@ -1,13 +1,16 @@
-<!DOCTYPE html>
-<html>
 <head>
 	<meta charset="utf-8">
 	<title>fantastic five program</title>
 	<link rel="stylesheet" type="text/css" href="assets/stylesheets/default.css"/>
+
+
+
+
+
 </head>
 <body>
 	<header class="navbar">
-		<div class="brand"><a href="index.html">Fantastic Five Training Application Prototype</a></div>
+		<div class="brand"></div>
 		<nav>
 			<ul>
 			</ul>
@@ -20,30 +23,34 @@
 			<div id= "studentsearch" style =background-color:#a5cd4e;height:140px;width:440px;border-radius:25px;>
 			<form>
 				Search by:<br>
-				last Name:<input type="text" name="lastname"><br>or<br>
-				student ID:<input type="text" name="idnum"><br>
+				class Name:<input type="text" name="class name"><br>or<br>
+				class instructor:<input type="text" name="idnum"><br>
 				<input type="submit" value="Go!">
 			</div>
-			</form>
+			</form> 
 			</h6>
 			<div id= "good_name" style = text-align:center;position:absolute;bottom:290px;left:570px;>
-			<a href="index.html" class="button gray">found num</a>
+			<link rel="stylesheet" type="text/css" href="button.css">
+			<a href="sample_program.html" class="button gray">found class</a>
 			</div>
-						<p></p>
+                        <p></p>
 
 			<div id= "good_num" style = text-align:center;position:absolute;bottom:290px;left:670px;>
-			<a href="index.html" class="button gray">found name</a>
+			<link rel="stylesheet" type="text/css" href="button.css">
+			<a href="instructor_classlist.html" class="button gray">found instructor</a>
 			</div>
-						<p></p>
+                        <p></p>
 
 			<div id= "bad" style = text-align:center;position:absolute;bottom:250px;left:635px;>
+			<link rel="stylesheet" type="text/css" href="button.css">
 			<a href="enrollment_retry.html" class="button gray">noone found</a>
 			</div>
-
+			
 			<h2>
-			<a href="#" class="button green">back</a>
-			<a href="#" class="button blue">home</a>
-			<a href="#" class="button gray">logout</a>
+			<link rel="stylesheet" type="text/css" href="button.css">
+			<a href="accounts.html" class="button green">back</a>
+			<a href="index.html" class="button blue">home</a>
+			<a href="login.html" class="button gray">logout</a>
 			</h2>
 			<p></p>
 		</section>
