--- a/login.html
+++ b/login.html
@@ -2,44 +2,60 @@
 <!DOCTYPE html>
 <html>
 <head>
-		<meta charset="utf-8">
-		<title>login</title>
-		<link rel="stylesheet" type="text/css" href="assets/stylesheets/default.css"/>
+        <meta charset="utf-8">
+        <title>login</title>
+        <link rel="stylesheet" type="text/css" href="assets/stylesheets/default.css"/>
+	
+
+
+
+
 </head>
 <body>
-		<header class="navbar">
-				<div class="brand"><a href="index.html">Fantastic Five Training Application Prototype</a></div>
-				<nav>
-						<ul>
-						</ul>
-				</nav>
-		</header>
-		<article class="main">
-				<section>
-						<h3>
-			<div id="login" style = background-color:#a5cd4e;height:140px;width:300px;border-radius:25px;>
+        <header class="navbar">
+                <div class="brand"></div>
+                <nav>
+                        <ul>
+                        </ul>
+                </nav>
+        </header>
+        <article class="main">
+                <section>
+                        <h3>
+			<div id="login" style = background-color:#a5cd4e;height:140px;width:300px;border-radius:25px;>		
 			<form>
 			<br>
 			login:<input type="text" name="login">
 			<br>
 			password:<input type="text" name="password">
 			<br>
+			
 
 			<input type="submit" class="button blue" value = "Go!">
 			</form>
 			</div>
-						</h3>
-			<div id= "good" style = text-align:center;position:absolute;bottom:330px;left:630px;>
-			<a href="index.html" class="button gray">good login</a>
+                        </h3>
+			<div id= "student" style = text-align:center;position:absolute;bottom:330px;left:630px;>
+			<link rel="stylesheet" type="text/css" href="button.css">
+			<a href="student_page_instructor_view.html" class="button gray">student login</a>
+			</div>    
+			<div id= "good" style = text-align:center;position:absolute;bottom:300px;left:630px;>
+			<link rel="stylesheet" type="text/css" href="button.css">
+			<a href="instructor_index.html" class="button gray">teacher login</a>
 			</div>
-						<p></p>
+			<div id= "admin login" style = text-align:center;position:absolute;bottom:270px;left:630px;>
+			<link rel="stylesheet" type="text/css" href="button.css">
+			<a href="index.html" class="button gray">admin login</a>
+			</div>
+                        <p></p>
 
-			<div id= "bad" style = text-align:center;position:absolute;bottom:300px;left:635px;>
+			<div id= "bad" style = text-align:center;position:absolute;bottom:240px;left:635px;>
+			<link rel="stylesheet" type="text/css" href="button.css">
 			<a href="badlogin.html" class="button gray">bad login</a>
 			</div>
-						<p></p>
-				</section>
-		</article>
+                        <p></p>
+                </section>
+        </article>
 </body>
 </html>
 
