--- a/sample_account.html
+++ b/sample_account.html
@@ -1,13 +1,16 @@
-<!DOCTYPE html>
-<html>
 <head>
 	<meta charset="utf-8">
 	<title>fantastic five program</title>
 	<link rel="stylesheet" type="text/css" href="assets/stylesheets/default.css"/>
+
+
+
+
+
 </head>
 <body>
 	<header class="navbar">
-		<div class="brand"><a href="index.html">Fantastic Five Training Application Prototype</a></div>
+		<div class="brand"></div>
 		<nav>
 			<ul>
 			</ul>
@@ -17,7 +20,7 @@
 		<section>
 			<h1>sample account page</h1>
 			<h4>
-
+			
 			<table border="1">
 			<tr>
 			<td>balance:</td>
@@ -30,20 +33,22 @@
 			</table>
 			</h4>
 			<h5>
-			<a href="#" class="Medbutton blue">Awards</a>
-			<a href="#" class="medbutton blue">Schedule</a>
-			<a href="#" class="medbutton blue">Enroll</a><br>
-			<a href="#" class="medbutton blue">Edit Account</a>
-			<a href="#" class="medbutton blue">Delete Account</a><br>
-			<a href="#" class="medbutton blue">Add student</a>
-			<a href="#" class="medbutton blue">Delete student</a>
+			<link rel="stylesheet" type="text/css" href="Medbutton.css">
+			<a href="awards.html" class="Medbutton blue">Awards</a>
+			<a href="schedule.html" class="medbutton blue">Schedule</a>
+			<a href="enrollment.html" class="medbutton blue">Enroll</a><br>
+			<a href="edit_account.html" class="medbutton blue">Edit Account</a>
+			<a href="delete_account.html" class="medbutton blue">Delete Account</a><br>
+			<a href="add_student_to_account.html" class="medbutton blue">Add student</a>
+			<a href="delete_account.html" class="medbutton blue">Delete student</a>
 			<br>
 			</h5>
-
+			
 			<h2>
-			<a href="#" class="button green">back</a>
-			<a href="#" class="button blue">home</a>
-			<a href="#" class="button gray">logout</a>
+			<link rel="stylesheet" type="text/css" href="button.css">
+			<a href="accounts.html" class="button green">back</a>
+			<a href="index.html" class="button blue">home</a>
+			<a href="login.html" class="button gray">logout</a>
 			</h2>
 			<p></p>
 		</section>
