--- a/accounts.html
+++ b/accounts.html
@@ -7,7 +7,7 @@
 
 
 
-change
+
 
 </head>
 <body>
@@ -20,7 +20,7 @@ change
 	</header>
 	<article class="main">
 		<section>
-			<h1>New Account</h1>
+			<h1>Accounts</h1>
 			<div id="nav" style="text-align:center;position:center">
 			<link rel="stylesheet" type="test/css" href="Bigbutton.css">
 			<a href="student_search.html" class="Bigbutton blue">view account</a>			
