--- a/delete_session.html
+++ b/delete_session.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-<<<<<<< HEAD
+
 	<title>Fantastic Five Prototype</title>
 	<link rel="stylesheet" type="text/css" href="assets/stylesheets/default.css">
-=======
+
     <title>Fantastic Five Prototype</title>
     <link rel="stylesheet" type="text/css" href="assets/stylesheets/default.css">
 
->>>>>>> 3d691956e57b9d50696a50d9bc0051632cf8bb88
+
 </head>
 <body>
 
 <header class="navbar">
-<<<<<<< HEAD
+ HEAD
 	<div class="brand"><a href="index.html">Fantastic Five Training Application Prototype</a></div>
 	<nav>
 		<ul>
@@ -51,42 +51,4 @@
 
 </body>
 </html>
-=======
-    <nav>
-        <ul>
 
-        </ul>
-    </nav>
-</header>
-
-<article class="main">
-    <section>
-        <h1>Delete Session</h1>
-
-        <div id="page_content" align="center">
-            <a href="confirmation_success.html" class="Medbutton blue">Submit</a>
-            <br>
-            <br><br>
-            <form>
-                <label>Select Session to Delete:</label><br>
-                <select id="session_list">
-
-                    <option value="Session1">&lt;Session 1&gt;</option>
-                    <option value="Session2">&lt;Session 2&gt;</option>
-                    <option value="Session3">&lt;Session 3&gt;</option>
-                    <option value="Session4">&lt;Session 4&gt;</option>
-                </select>
-            </form>
-        </div>
-
-        <h2>
-            <a href="list_of_sessions.html" class="button green">back</a>
-            <a href="index.html" class="button blue">home</a>
-            <a href="login.html" class="button gray">logout</a>
-        </h2>
-    </section>
-</article>
-
-</body>
-</html>
->>>>>>> 3d691956e57b9d50696a50d9bc0051632cf8bb88
