hey guys, I've been update the links and making it look alittle nicer, if you start working on any pages let me know via email

--- a/awards.html
+++ b/awards.html
@@ -22,14 +22,14 @@
 			</div>
 
 			<div id="give" style="text-align:center;position:center">
-			<a href="#" class="medbutton blue">give new award</a>
+			<a href="assign_award.html" class="button-action button blue">give new award</a>
 			</div>
-			<h2>
+			<footer>
 			<link rel="stylesheet" type="text/css">
-			<a href="#" class="button green">back</a>
-			<a href="#" class="button blue">home</a>
-			<a href="#" class="button gray">logout</a>
-			</h2>
+			<a href="sample_student_page.html" class="button green">back</a>
+			<a href="index.html" class="button blue">home</a>
+			<a href="login.html" class="button gray">logout</a>
+			</footer>
 			<p></p>
 		</section>
 	</article>
