--- a/class_times.html
+++ b/class_times.html
@@ -18,7 +18,7 @@
 			<h1>C programming for dummies<br>
 			</h1>
 <div id="nav" style="text-align:center;position:center">
-			<form>
+			<form action="sample_program.html">
 			<select id="select class time" style="color: #222200" size="1" name="classes">
 			<option value="">times:</option>
 	  		<option value="1">M,W: 10:00-12:00</option>
@@ -30,11 +30,11 @@
 				<input type="submit" value="Go!">
 			</form>
 			</div>
-			<h2><link rel="stylesheet" type="text/css">
+			<footer><link rel="stylesheet" type="text/css">
 			<a href="accounts.html" class="button green">back</a>
 			<a href="index.html" class="button blue">home</a>
 			<a href="login.html" class="button gray">logout</a>
-			</h2>
+			<footer>
 			<p></p>
 		</section>
 	</article>
