--- a/confirmation_success.html
+++ b/confirmation_success.html
@@ -19,14 +19,14 @@
 
 			<link rel="stylesheet" type="test/css" href="Bigbutton.css">
 			</div>
-			<h2>
+			<footer>
 			<a href="#" class="button green">back</a>
 			<a href="index.html" class="button blue">home</a>
 			<a href="login.html" class="button gray">logout</a>
 
             
 
-			</h2>
+			</footer>
 			<p></p>
 		</section>
 	</article>
