--- a/convert_to_group_account.html
+++ b/convert_to_group_account.html
@@ -19,14 +19,14 @@
 <div id="nav" style="text-align:center;position:center;">
 			<link rel="stylesheet" type="test/css" href="Bigbutton.css">
 			Account is not currently set to group account, continue?<br>
-			<a href="#" class="Bigbutton blue">yes</a>
-			<a href="sample_account.html" class="Bigbutton blue">no</a>
+			<a href="add_student_to_account.html" class="button-action button blue">yes</a>
+			<a href="sample_account.html" class="button-action button blue">no </a>
 			</div>
-			<h2>
-			<a href="#" class="button green">back</a>
-			<a href="#" class="button blue">home</a>
-			<a href="#" class="button gray">logout</a>
-			</h2>
+			<footer>
+			<a href="sample_account.html" class="button green">back</a>
+			<a href="index.html" class="button blue">home</a>
+			<a href="login.html" class="button gray">logout</a>
+			</footer>
 			<p></p>
 		</section>
 	</article>
