--- a/delete_confirm.html
+++ b/delete_confirm.html
@@ -16,16 +16,16 @@
 	<article class="main">
 		<section>
 			<h1>Are You Sure?</h1>
-		<div id="nav" style="text-align:center;position:center">
+<div id="nav" style="text-align:center;position:center">
 			<link rel="stylesheet" type="test/css" href="Bigbutton.css">
-			<a href="confirmation_success.html" class="Bigbutton blue">Yes</a>
-			<a href="sample_program.html" class="Bigbutton blue">No</a>
+			<a href="delete_confirm.html" class="button-main button blue">Yes</a>
+			<a href="index" class="button-main button blue"> No </a>
 			</div>
-			<h2>
+			<footer>
 			<a href="#" class="button green">back</a>
-			<a href="index" class="button blue">home</a>
-			<a href="login" class="button gray">logout</a>
-			</h2>
+			<a href="index.html" class="button blue">home</a>
+			<a href="login.html" class="button gray">logout</a>
+			</footer>
 			<p></p>
 		</section>
 	</article>
