--- a/delete_session.html
+++ b/delete_session.html
@@ -13,7 +13,7 @@
 <body>
 
 <header class="navbar">
- HEAD
+
 	<div class="brand"><a href="index.html">Fantastic Five Training Application Prototype</a></div>
 	<nav>
 		<ul>
@@ -26,26 +26,29 @@
 		<h1>Delete Session</h1>
 
 		<div id="page_content" align="center">
-			<a href="confirmation_success.html" class="Medbutton blue">Submit</a>
+			
 			<br>
-			<br><br>
-			<form>
-				<label>Select Session to Delete:</label><br>
+			<br>
+			<form action=delete_confirm.html>
+				Select Session to Delete:
 				<select id="session_list">
 
 					<option value="Session1">&lt;Session 1&gt;</option>
 					<option value="Session2">&lt;Session 2&gt;</option>
 					<option value="Session3">&lt;Session 3&gt;</option>
 					<option value="Session4">&lt;Session 4&gt;</option>
+					
 				</select>
+				<input type="submit" value="Go!">
 			</form>
 		</div>
+<br><br>
 
-		<h2>
+		<footer>
 			<a href="list_of_sessions.html" class="button green">back</a>
 			<a href="index.html" class="button blue">home</a>
 			<a href="login.html" class="button gray">logout</a>
-		</h2>
+		</footer>
 	</section>
 </article>
 
