--- a/edit_account.html
+++ b/edit_account.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<header class="navbar">
-		<div class="brand"><a href="index.html">Fantastic Five Training Application Prototype</a></div>
+		<div class="brand"></div>
 		<nav>
 			<ul>
 			</ul>
@@ -18,27 +18,39 @@
 	</header>
 	<article class="main">
 		<section>
-			<h1>New Student</h1>
-<div id="nav" style="text-align:center;position:center">
-			<form action=confirmation_success.html>
+			
+			<h1>Edit Account</h1>
+			<div id="edit" style="background-color:#a5cd4e;height:300px;width:550px;border-radius:25px;text-align:center;margin-left:auto;margin-right:auto">
+			<br>
+			<form action =confirmation_success.html>
 			<label>First name:</label>
 			<input type="text"/>
-
 			<label>Last name:</label>
 			<input type="text"/>
-
+			<label>Address line 1:</label>
+			<input type="text"/>
+			<label>Address line 2:</label>
+			<input type="text"/>
+			<label>Postal code:</label>
+			<input type="text" />
+			<label>City:</label>
+			<input type="text"/>
+			<label>State:</label>
+			<input type="text"/>
 			<label>Email:</label>
-			<input style="email"/><br>
-
+			<input style="email"/>
+			<label>Password:</label>
+			<input style ="text"/><br>
 			<input type="submit" value="Go!">
-
 			</form>
 			</div>
+			<br><br>
 			<footer><link rel="stylesheet" type="text/css" href="button.css">
 			<a href="accounts.html" class="button green">back</a>
 			<a href="index.html" class="button blue">home</a>
 			<a href="login.html" class="button gray">logout</a>
-			</footer>
+			
+			</div>
 			<p></p>
 		</section>
 	</article>
