--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<footer>
 		<nav>
 			<a href="login.html"  class="button green">back</a>
-			<a href="homeduh.html" class="button blue">home</a>
+			<a href="index.html" class="button blue">home</a>
 			<a href="login.html" class="button gray">logout</a>
 		</nav>
 	</footer>
