--- a/accounts.html
+++ b/accounts.html
@@ -15,17 +15,22 @@
 	</header>
 	<article class="main">
 		<section>
+			
 			<h1>Accounts</h1>
 			<div id="nav" style="text-align:center;position:center">
 			<link rel="stylesheet" type="test/css" href="Bigbutton.css">
-			<a href="student_search.html" class="Bigbutton blue">view account</a>
-			<a href="new_account.html" class="Bigbutton blue">new account</a>
+			<a href="student_search.html" class="button-action button blue">view account</a>
+			<a href="new_account.html" class="button-action button blue">new account</a>
 			</div>
-			<h2><link rel="stylesheet" type="text/css" href="button.css">
+			
+			<footer><link rel="stylesheet" type="text/css" href="button.css">
+		
 			<a href="index.html" class="button green">back</a>
 			<a href="index.html" class="button blue">home</a>
 			<a href="login.html" class="button gray">logout</a>
-			</h2>
+			
+			</footer>
+			
 			<p></p>
 		</section>
 	</article>
