--- a/assign_award.html
+++ b/assign_award.html
@@ -17,9 +17,9 @@
 		<section>
 			<h1>Award Search</h1>
 <div id="nav" style="text-align:center;position:center">
-			<form>
+			<form action=confirmation_success.html>
 			<select id="select award" style="color: #222200" size="1" name="Awards">
-			<option value="">Students:</option>
+			<option value="">awards:</option>
 	  		<option value="java1">java master </option>
 	  		<option value="dog1">dog whisperer</option>
 				<option value="yoga1">stretch armstrong</option>
@@ -28,11 +28,11 @@
 				<input type="submit" value="Go!">
 			</form>
 			</div>
-			<h2>
+			<footer>
 			<a href="accounts.html" class="button green">back</a>
 			<a href="index.html" class="button blue">home</a>
 			<a href="login.html" class="button gray">logout</a>
-			</h2>
+			</footer>
 			<p></p>
 		</section>
 	</article>
