--- a/badlogin.html
+++ b/badlogin.html
@@ -20,28 +20,30 @@
 			<br>
 			ERROR: username/password incorrect, try again
 			</div>
-						<h3>
-			<div id="login" style = background-color:#a5cd4e;height:140px;width:300px;border-radius:25px;>
+					
+			<div id="login" style = "background-color:#a5cd4e;height:125px;width:350px;border-radius:25px;text-align:center;margin-left:auto;margin-right:auto">
 			<form>
 			<br>
-			login:<input type="text" name="login">
-			<br>
-			password:<input type="text" name="password">
-			<br>
-
-
+			<label>login:</label><input type="text">
+			
+			<label>password:</label><input type="text"/><br>
 			<input type="submit" class="button blue" value = "Go!">
 			</form>
 			</div>
-						</h3>
-			<div id= "good" style = text-align:center;position:absolute;bottom:330px;left:630px;>
-			<a href="index.html" class="button gray">good login</a>
-			</div>
-						<p></p>
+			
+						
+			<footer>
+			<a href="index.html" class="button gray">admin login</a>
 
-			<div id= "bad" style = text-align:center;position:absolute;bottom:300px;left:635px;>
+
+			<a href="student_page_instructor_view.html" class="button gray">student login</a>
+			</footer>
+			<footer>
+			<a href="instructor_index.html" class="button gray">instructor login</a>
+
+
 			<a href="badlogin.html" class="button gray">bad login</a>
-			</div>
+			</footer>
 						<p></p>
 				</section>
 		</article>
