--- a/class_schedule_calendar_page.html
+++ b/class_schedule_calendar_page.html
@@ -20,8 +20,8 @@
 		<h1>Schedule Session</h1>
 
 		<div id="page_content" align="center">
-			<a href="confirmation_success.html" class="Medbutton blue">Submit Valid</a>
-			<a href="schedule_session.html" class="Medbutton blue">Submit Invalid</a>
+			<a href="confirmation_success.html" class="button gray">Submit Valid</a>
+			<a href="schedule_session.html" class="button gray">Submit Invalid</a>
 			<br>
 			<br><br>
 			<table align="center" border="1">	
@@ -37,11 +37,11 @@
 			</table>
 		</div>
 
-		<h2>
+		<footer>
 			<a href="list_of_sessions.html" class="button green">back</a>
 			<a href="index.html" class="button blue">home</a>
 			<a href="login.html" class="button gray">logout</a>
-		</h2>
+		</footer>
 	</section>
 </article>
 
