--- a/enrollment.html
+++ b/enrollment.html
@@ -19,8 +19,8 @@
 	<article class="main">
 		<section>
 			<h1>enrollment page</h1>
-			<h6>
-			<div id= "studentsearch" style =background-color:#a5cd4e;height:140px;width:440px;border-radius:25px;>
+			
+			<div id= "studentsearch" style ="background-color:#a5cd4e;height:140px;width:440px;border-radius:25px;text-align:center;margin-left:auto;margin-right:auto">
 			<form>
 				Search by:<br>
 				class Name:<input type="text" name="class name"><br>or<br>
@@ -28,30 +28,27 @@
 				<input type="submit" value="Go!">
 			</div>
 			</form> 
-			</h6>
-			<div id= "good_name" style = text-align:center;position:absolute;bottom:290px;left:570px;>
+			<br><br>
+			<footer>
 			<link rel="stylesheet" type="text/css" href="button.css">
 			<a href="sample_program.html" class="button gray">found class</a>
-			</div>
-                        <p></p>
+			
 
-			<div id= "good_num" style = text-align:center;position:absolute;bottom:290px;left:670px;>
+			
 			<link rel="stylesheet" type="text/css" href="button.css">
 			<a href="instructor_classlist.html" class="button gray">found instructor</a>
-			</div>
-                        <p></p>
 
-			<div id= "bad" style = text-align:center;position:absolute;bottom:250px;left:635px;>
+
 			<link rel="stylesheet" type="text/css" href="button.css">
 			<a href="enrollment_retry.html" class="button gray">noone found</a>
-			</div>
-			
-			<h2>
+			</footer> 
+			<br><br>
+			<footer>
 			<link rel="stylesheet" type="text/css" href="button.css">
 			<a href="accounts.html" class="button green">back</a>
 			<a href="index.html" class="button blue">home</a>
 			<a href="login.html" class="button gray">logout</a>
-			</h2>
+			</footer>
 			<p></p>
 		</section>
 	</article>
