--- a/login.html
+++ b/login.html
@@ -2,60 +2,50 @@
 <!DOCTYPE html>
 <html>
 <head>
-        <meta charset="utf-8">
-        <title>login</title>
-        <link rel="stylesheet" type="text/css" href="assets/stylesheets/default.css"/>
-	
-
-
-
-
+		<meta charset="utf-8">
+		<title>login</title>
+		<link rel="stylesheet" type="text/css" href="assets/stylesheets/default.css"/>
 </head>
 <body>
-        <header class="navbar">
-                <div class="brand"></div>
-                <nav>
-                        <ul>
-                        </ul>
-                </nav>
-        </header>
-        <article class="main">
-                <section>
-                        <h3>
-			<div id="login" style = background-color:#a5cd4e;height:140px;width:300px;border-radius:25px;>		
+		<header class="navbar">
+				<div class="brand"><a href="index.html">Fantastic Five Training Application Prototype</a></div>
+				<nav>
+						<ul>
+						</ul>
+				</nav>
+		</header>
+		<article class="main">
+				<section>
+
+					<br><br><br>
+			<div id="login" style = "background-color:#a5cd4e;height:125px;width:350px;border-radius:25px;text-align:center;margin-left:auto;margin-right:auto">
 			<form>
 			<br>
-			login:<input type="text" name="login">
-			<br>
-			password:<input type="text" name="password">
-			<br>
+			<label>login:</label><input type="text"/>
 			
-
+			<label>password:</label><input type="text"/>
+			<br>
 			<input type="submit" class="button blue" value = "Go!">
 			</form>
 			</div>
-                        </h3>
-			<div id= "student" style = text-align:center;position:absolute;bottom:330px;left:630px;>
-			<link rel="stylesheet" type="text/css" href="button.css">
-			<a href="student_page_instructor_view.html" class="button gray">student login</a>
-			</div>    
-			<div id= "good" style = text-align:center;position:absolute;bottom:300px;left:630px;>
-			<link rel="stylesheet" type="text/css" href="button.css">
-			<a href="instructor_index.html" class="button gray">teacher login</a>
-			</div>
-			<div id= "admin login" style = text-align:center;position:absolute;bottom:270px;left:630px;>
-			<link rel="stylesheet" type="text/css" href="button.css">
+			
+				<br>		
+			<footer>
 			<a href="index.html" class="button gray">admin login</a>
-			</div>
-                        <p></p>
 
-			<div id= "bad" style = text-align:center;position:absolute;bottom:240px;left:635px;>
-			<link rel="stylesheet" type="text/css" href="button.css">
+
+			<a href="student_page_instructor_view.html" class="button gray">student login</a>
+			</footer>
+			<footer>
+			<a href="instructor_index.html" class="button gray">instructor login</a>
+
+
 			<a href="badlogin.html" class="button gray">bad login</a>
-			</div>
-                        <p></p>
-                </section>
-        </article>
+			</footer>
+						<p></p>
+				</section>
+		</article>
 </body>
+</html>
 </html>
 
