--- a/new_account.html
+++ b/new_account.html
@@ -15,34 +15,37 @@
 	</header>
 	<article class="main">
 		<section>
-			<h1>New Account</h1><br>
-<div id="nav" style="text-align:center;position:center">
-			<form>
-			First name:<input type="text" name="firstname"><br>
-			Last name:<input type="text" name="lastname"><br>
-			Address line 1:<input type="text" name="address1"><br>
-			Address line 2:<input type="text" name="address2"><br>
-			Postal code:<input type="text" name="postal"><br>
-			City:<input type="text" name="city"><br>
-			State:<input type="text" name="state"><br>
-			Email: <input style="email" name="email"><br>
+			<h1>New Account</h1>
+			<div id="edit" style="background-color:#a5cd4e;height:300px;width:550px;border-radius:25px;text-align:center;margin-left:auto;margin-right:auto">
+			<br>
+			<form action =confirmation_success.html>
+			<label>First name:</label>
+			<input type="text"/>
+			<label>Last name:</label>
+			<input type="text"/>
+			<label>Address line 1:</label>
+			<input type="text"/>
+			<label>Address line 2:</label>
+			<input type="text"/>
+			<label>Postal code:</label>
+			<input type="text" />
+			<label>City:</label>
+			<input type="text"/>
+			<label>State:</label>
+			<input type="text"/>
+			<label>Email:</label>
+			<input style="email"/>
+			<label>Password:</label>
+			<input style ="text"/><br>
 			<input type="submit" value="Go!">
 			</form>
 			</div>
-			<h2>
+			<br><br>
+			<footer><link rel="stylesheet" type="text/css" href="button.css">
 			<a href="accounts.html" class="button green">back</a>
 			<a href="index.html" class="button blue">home</a>
 			<a href="login.html" class="button gray">logout</a>
-			</h2>
-			<div id= "good" style = text-align:center;position:absolute;bottom:200px;left:630px;>
-			<link rel="stylesheet" type="text/css" href="button.css">
-			<a href="confirmation_success.html" class="button gray">good info</a>
-			</div>
-                        <p></p>
-
-			<div id= "bad" style = text-align:center;position:absolute;bottom:170px;left:635px;>
-			<link rel="stylesheet" type="text/css" href="button.css">
-			<a href="new_account_again.html" class="button gray">bad info</a>
+			
 			</div>
 			<p></p>
 		</section>
